--- a/css/all-responsive-white.css@v=7.css
+++ b/css/all-responsive-white.css@v=7.css
@@ -10475,7 +10475,13 @@ form .row-signup {
   .top-links-mobile {
     width: 100%;
   }
-
+::-webkit-scrollbar{
+  width: 2px;
+}
+::-webkit-scrollbar-thumb {
+  
+  border-radius: 2px;
+}
   .box {
     width: 96%;
   }
